--- a/index.html
+++ b/index.html
@@ -35,11 +35,16 @@
           <li><a href="#resources">Resources</a></li>
         </ul>
       </div>
-<div class="custom-control custom-switch">
-  <input type="checkbox" class="custom-control-input" id="darkSwitch" />
-  <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
-</div>
-<script src="https://raw.githubusercontent.com/coliff/dark-mode-switch/master/dark-mode-switch.min.js"></script>
+<div class="nav-link">
+
+          <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="darkSwitch">
+            <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
+          </div>
+
+          <script src="https://raw.githubusercontent.com/coliff/dark-mode-switch/master/dark-mode-switch.min.js"></script>
+
+        </div>
     </nav>
   </header>
 
