dark mode support
added dark mode + fix redirect

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<meta name="title" content="Corona Safety"/>
   <title>Fight Against COVID-19!</title>
   <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/d01c52956f.js" crossorigin="anonymous"></script>
 </head>
@@ -34,16 +35,12 @@
           <li><a href="#data">Data</a></li>
           <li><a href="#resources">Resources</a></li>
         </ul>
-      </div>
-<div class="nav-link">
 
           <div class="custom-control custom-switch">
             <input type="checkbox" class="custom-control-input" id="darkSwitch">
             <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
           </div>
-
           <script src="https://raw.githubusercontent.com/coliff/dark-mode-switch/master/dark-mode-switch.min.js"></script>
-
         </div>
     </nav>
   </header>
@@ -64,7 +61,7 @@
           <a href="#prevention" class="prevention">Prevention</a>
         </div>
 
-        <a href="https://www.facebook.com/groups/codersofxda/" class="xda__link">An Initiative by RGCER,Nagpur.</a>
+        <a href="https://rgcer.edu.in/" class="xda__link">An Initiative by RGCER,Nagpur.</a>
       </div>
 
       <div class="hero__image">
