--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <input type="checkbox" class="custom-control-input" id="darkSwitch">
             <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
           </div>
-          <script src="https://raw.githubusercontent.com/coliff/dark-mode-switch/master/dark-mode-switch.min.js"></script>
+          <script src="./js/dark-mode-switch.min.js"></script>
         </div>
     </nav>
   </header>
