--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 		  <li><i class="fas fa-donate"></i><a href="https://www.pmcares.gov.in/en/">Donate to PM CARES Fund</a></li>
           <li><i class="fas fa-sitemap"></i> <a
               href="https://www.mohfw.gov.in/pdf/coronvavirushelplinenumber.pdf">State/District wise details</a></li>
-          <li><i class="far fa-life-ring"></i> <a href="https://wa.me/919013151515">MyGov Corona Helpdesk (WhatsApp)</a></li>
+          <li><i class="far fa-life-ring"></i> <a href="https://api.whatsapp.com/send?phone=919013151515&text=Hi">MyGov Corona Helpdesk (WhatsApp)</a></li>
           <li><i class="fas fa-globe"></i> <a href="https://api.whatsapp.com/send?phone=41798931892&text=hi&source=&data=&app_absent=">WHO Health Alert (WhatsApp)</a></li>
           <li><i class="fas fa-external-link-square-alt"></i> <a
               href="https://www.covid19india.org/"> Our COVID-19 Tracker</a></li>
@@ -204,7 +204,7 @@
             <li><a href="https://twitter.com/mygovindia" class="twit"><i class="fab fa-twitter"></i> Twitter</a></li>
             <li><a href="https://www.instagram.com/mygovindia/?hl=en" class="insta"><i class="fab fa-instagram"></i> Instagram</a></li>
             <li><a href="https://www.messenger.com/t/MyGovIndia" class="mess"><i class="fab fa-facebook-messenger"></i> Messenger</a></li>
-            <li><a href="https://wa.me/919013353535" class="wa"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
+            <li><a href="https://api.whatsapp.com/send?phone=919013353535&text=Hi" class="wa"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
             <li><a href="https://www.linkedin.com/company/mygov-india/" class="li"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
             <li><a href="https://www.youtube.com/channel/UCTJpJk8bqQQEqeX58z8eimA" class="yt"><i class="fab fa-youtube"></i> YouTube</a></li>
             <li><a href="https://t.me/MyGovCoronaNewsdesk" class="tg"><i class="fab fa-telegram"></i> Telegram</a></li>
