--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
+	
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="author" content="Rushi Ranpise"/>
-	<meta name="classification" content="Corona Safety"/>
+	<meta name="classification" content="Fight Against COVID-19!"/>
 	<meta name="description" content="Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019."/>
 	<meta name="keywords" content="corona, covid19, covid-19. safety, tracking, page, open, source, github, disease, facebook, instagram, whatsapp, helpline, government, india"/>
 	<meta name="referrer" content="origin-when-crossorigin"/>
@@ -36,10 +36,10 @@
           <li><a href="#resources">Resources</a></li>
         </ul>
 
-          <div class="custom-control custom-switch">
+         <div class="custom-control custom-switch">
             <input type="checkbox" class="custom-control-input" id="darkSwitch">
             <label class="custom-control-label" for="darkSwitch">Dark Mode</label>
-          </div>
+         </div>
           <script src="./js/dark-mode-switch.min.js"></script>
         </div>
     </nav>
@@ -165,9 +165,6 @@
             frequent hand-cleaning with alcohol-based hand rub or soap and water. Read more about when & how to use
             masks from <a href="https://www.who.int/health-topics/coronavirus#tab=tab_1">WHO</a>.</p>
         </div>
-
-
-
       </div>
     </div>
   </section>
@@ -181,10 +178,9 @@
       <div class="resources__grid">
         <ul class="social">
           <li><i class="fas fa-phone-square-alt"></i>Helpine - <a>011-23978046 or 1075</a></li>
-		  <li><i class="fas fa-download"></i><a href="https://www.mygov.in/aarogya-setu-app">Download Aarogya Setu App</a></li>
-		  <li><i class="fas fa-donate"></i><a href="https://www.pmcares.gov.in/en/">Donate to PM CARES Fund</a></li>
-          <li><i class="fas fa-sitemap"></i> <a
-              href="https://www.mohfw.gov.in/pdf/coronvavirushelplinenumber.pdf">State/District wise details</a></li>
+          <li><i class="fas fa-download"></i><a href="https://www.mygov.in/aarogya-setu-app">Download Aarogya Setu App</a></li>
+          <li><i class="fas fa-donate"></i><a href="https://www.pmcares.gov.in/en/">Donate to PM CARES Fund</a></li>
+          <li><i class="fas fa-sitemap"></i> <a href="https://www.mohfw.gov.in/pdf/coronvavirushelplinenumber.pdf">State/District wise details</a></li>
           <li><i class="far fa-life-ring"></i> <a href="https://api.whatsapp.com/send?phone=919013151515&text=Hi">MyGov Corona Helpdesk (WhatsApp)</a></li>
           <li><i class="fas fa-globe"></i> <a href="https://api.whatsapp.com/send?phone=41798931892&text=hi&source=&data=&app_absent=">WHO Health Alert (WhatsApp)</a></li>
           <li><i class="fas fa-external-link-square-alt"></i> <a
@@ -194,8 +190,8 @@
         </ul>
 
         <div class="social__hub">
-		<br>
-		<h3><a href="https://www.mygov.in/covid-19/">Visit Government of India Site</a></h3>
+	  <br>
+	  <h3><a href="https://www.mygov.in/covid-19/">Visit Government of India Site</a></h3>
 		
           <h3>MyGov Social Hub</h3>
 
@@ -208,7 +204,7 @@
             <li><a href="https://www.linkedin.com/company/mygov-india/" class="li"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
             <li><a href="https://www.youtube.com/channel/UCTJpJk8bqQQEqeX58z8eimA" class="yt"><i class="fab fa-youtube"></i> YouTube</a></li>
             <li><a href="https://t.me/MyGovCoronaNewsdesk" class="tg"><i class="fab fa-telegram"></i> Telegram</a></li>
-			<li><a href="https://www.tiktok.com/@mygovindia" class="tk"><i class="fas fa-music"></i> TickTok</a></li>
+	    <li><a href="https://www.tiktok.com/@mygovindia" class="tk"><i class="fas fa-music"></i> TicTok</a></li>
           </ul>
         </div>
       </div>
