--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <li><a href="https://www.linkedin.com/company/mygov-india/" class="li"><i class="fab fa-linkedin"></i> LinkedIn</a></li>
             <li><a href="https://www.youtube.com/channel/UCTJpJk8bqQQEqeX58z8eimA" class="yt"><i class="fab fa-youtube"></i> YouTube</a></li>
             <li><a href="https://t.me/MyGovCoronaNewsdesk" class="tg"><i class="fab fa-telegram"></i> Telegram</a></li>
-	    <li><a href="https://www.tiktok.com/@mygovindia" class="tk"><i class="fas fa-music"></i> TicTok</a></li>
+	    <li><a href="https://www.tiktok.com/@mygovindia" class="tk"><i class="fas fa-music"></i> TikTok</a></li>
           </ul>
         </div>
       </div>
