--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="keywords" content="corona, covid19, covid-19. safety, tracking, page, open, source, github, disease, facebook, instagram, whatsapp, helpline, government, india"/>
 	<meta name="referrer" content="origin-when-crossorigin"/>
 	<meta name="robots" content="index,follow"/>
-	<meta name="title" content="Corona Safety"/>
+	<meta name="title" content="Fight Against COVID-19!"/>
   <title>Fight Against COVID-19!</title>
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
