--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   </section>
 
   <section class="stats" id="data">
+	  	  <h3>Nagpur</h3><br>
     <div class="stats__inner wrapper">
       <div class="stats__bar">
         <div class="stat__item confirmed">
@@ -94,9 +95,9 @@
         </div>
       </div>
       <h5 class="updated__at">
-        Official Numbers, Last Updated -
-        <span class="last__updated">
-          [Waiting...]
+        Auto Updated -
+        <span class="last__updatedz">
+          Everyday
         </span>
       </h5>
     </div>
