--- a/index.html
+++ b/index.html
@@ -99,7 +99,14 @@
         <span class="last__updatedz">
           Everyday
         </span>
+		<br><br>Source:
       </h5>
+	  <marquee behavior=slide width="50%" height="50%">
+	  <center>
+	  <i class="fas fa-globe"></i><a href="https://www.covid19india.org/">&nbsp; Website</a>
+	  &nbsp; & &nbsp;
+	  <a class="fab fa-twitter" href="https://twitter.com/covid19indiaorg">&nbsp; Twitter</a>
+      </center>
     </div>
   </section>
 
