--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   </section>
 
   <section class="stats" id="data">
-	  	  <h3>Nagpur</h3><br>
+	  	  <center><h3>Nagpur</h3><br></center>
     <div class="stats__inner wrapper">
       <div class="stats__bar">
         <div class="stat__item confirmed">
@@ -96,12 +96,11 @@
       </div>
       <h5 class="updated__at">
         Auto Updated -
-        <span class="last__updatedz">
+        <span class="last__updated">
           Everyday
         </span>
 		<br><br>Source:
       </h5>
-	  <marquee behavior=slide width="50%" height="50%">
 	  <center>
 	  <i class="fas fa-globe"></i><a href="https://www.covid19india.org/">&nbsp; Website</a>
 	  &nbsp; & &nbsp;
